--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,25 +1,36 @@
 {
-  "version": "0.2.0",
-  "configurations": [
-    {
-      "name": "C/C++ Runner: Debug Session",
-      "type": "cppdbg",
-      "request": "launch",
-      "args": [],
-      "stopAtEntry": false,
-      "externalConsole": true,
-      "cwd": "c:/Users/Dymon/GitProjects/OTUS-C-2024-12-Dmitry_Shalgachov/HW01",
-//      "program": "c:/Users/Dymon/GitProjects/OTUS-C-2024-12-Dmitry_Shalgachov/HW01/build/Debug/outDebug",
-      "program": "C:/MinGW/bin/gcc",
-      "MIMode": "gdb",
-      "miDebuggerPath": "gdb",
-      "setupCommands": [
+    "version": "0.2.0",
+    "configurations": [
         {
-          "description": "Enable pretty-printing for gdb",
-          "text": "-enable-pretty-printing",
-          "ignoreFailures": true
+            "name": "C/C++ Runner: Debug Session",
+            "type": "cppdbg",
+            "request": "launch",
+            "args": [],
+            "stopAtEntry": false,
+            "externalConsole": true,
+            "cwd": "c:/Users/Dymon/GitProjects/OTUS-C-2024-12-Dmitry_Shalgachov/HW01",
+            "program": "C:/MinGW/bin/gcc.exe",
+            "MIMode": "gdb",
+            "miDebuggerPath": "gdb",
+            "setupCommands": [
+                {
+                    "description": "Enable pretty-printing for gdb",
+                    "text": "-enable-pretty-printing",
+                    "ignoreFailures": true
+                }
+            ]
+        },
+        {
+            "name": "(Windows) Launch",
+            "type": "cppvsdbg",
+            "request": "launch",
+//            "program": "enter program name, for example ${workspaceFolder}/a.exe",
+            "program": "C:/MinGW/bin/gcc.exe",
+            "args": [],
+            "stopAtEntry": false,
+            "cwd": "${fileDirname}",
+            "environment": [],
+            "console": "externalTerminal"
         }
-      ]
-    }
-  ]
+    ]
 }
